integration-tests/src/test/resources/tunneling/nginx.tunneling.template.yaml
# Copyright (c) 2021, 2022, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
# https://kubernetes.github.io/ingress-nginx/examples/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
  labels:
  name: ngnix-tunneling
  namespace: DOMAIN_NS
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path:
            pathType: ImplementationSpecific
            backend:
              service:
                name: DOMAIN_UID-cluster-CLUSTER
                port:
                  number: 7788
