integration-tests/src/test/resources/tunneling/voyager.tls.tunneling.template.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: voyager-tls-tunneling
  namespace: DOMAIN_NS
  annotations:
    ingress.appscode.com/type: 'NodePort'
    ingress.appscode.com/stats: 'true'
    ingress.appscode.com/affinity: 'cookie'
spec:
  tls:
  - secretName: TLS_CERT
    hosts: 
    - '*'
  frontendRules:
  - port: 443
    rules:
    - http-request del-header WL-Proxy-SSL
    - http-request del-header X-Forwarded-For
    - http-request del-header WL-Proxy-Client-IP
    - http-request set-header WL-Proxy-SSL true
  rules:
  - host: '*'
    http:
      paths:
      - backend:
          serviceName: DOMAIN_UID-cluster-CLUSTER
          servicePort: '8877'
